--- a/pulse/styles.css
+++ b/pulse/styles.css
@@ -1,7 +1,6 @@
 * {
 	margin: 0;
 	padding: 0;
-	border: 0;
 }
 
 body {
@@ -22,20 +21,66 @@ img {
 }
 
 #nav ul {
-	list-style-type: none;
 	text-align: right;
 	float: right;
 	padding-top: 5%;
-	width: 81%
+	width: 81%;
+  display: inline;
+  margin: 0;
+  list-style: none;
 }
 
 #nav li {
-	display: inline;
+	display: inline-block;
 	margin-left: 7%;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 #nav li:first-child {
 	margin: 0;
+}
+
+#nav li:hover {
+  background: #555;
+  color: #fff;
+}
+
+#nav li ul {
+  padding: 0;
+  position: absolute;
+  width: 150px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+
+#nav li ul li { 
+  background: #555; 
+  display: block; 
+  text-align: left;
+  text-shadow: 0 -1px 0 #000;
+  padding: 15px 20px;
+  margin: 0;
+}
+
+#nav li ul li:hover { background: #666; }
+
+#nav li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
 #full-content {
@@ -71,7 +116,7 @@ img {
 }
 
 #tag-top {
-	height: 30%;
+	height: 60px;
 }
 
 #tag-top h2 {
@@ -98,20 +143,28 @@ img {
 }
 
 #header-video {
-	background-color: white;
+	background-image: url('images/smile-big.jpg');
+	background-position: cover;
 	width: 53%;
 	float: right;
 	height: 100%;
+}
+
+#header-video img {
+	float: left;
+	margin: 10%;
 }
 
 #content-left {
 	float: left;
 	width: 48.5%;
 }
+
 #content-right {
 	float: right;
 	width: 48.5%;
 }
+
 .group {
 	content: "";
 	display: table;
@@ -119,7 +172,6 @@ img {
 }
 
 #content-right img {
-	/*width: 40%;*/
 	margin: 4% 0;
 	height: 137px;
 }
@@ -135,7 +187,6 @@ img {
 #content-right li {
 	padding: 4px 0;
 }
-
 
 footer {
 	padding: 20px 0 40px;
@@ -155,3 +206,17 @@ footer li {
 footer li:last-child {
 	border: none;
 }
+
+
+@media screen and (max-width: 1290px) {
+
+	#nav ul {
+		width: 50%;
+		padding-top: 0;
+	}
+}
+/*if time tonight, try to make the 2 columns one on a small screen size
+window width 887px
+*/
+
+
